--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^1.1.2
+  google_mlkit_text_recognition: ^0.14.0
+
 
 dev_dependencies:
   flutter_test:
